--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="nav-header">
                 <a class="logo-header" href="">WEB<span class="studio">STUDIO</span></a>
                 <ul class="listmenu">
-                    <li class="menu"><a class="link" href="./index.html">Studio</a></li>
+                    <li class="menu"><a class="link" href="./index.html">Studioo</a></li>
                     <li class="menu"><a class="link" href="">Portfolio</a></li>
                     <li class="menu"><a class="link" href="">Contacts</a></li>
                 </ul>
@@ -162,7 +162,7 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 
