--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
 
 <body>
     <header class="header">
-        <div class="container header-container">
-            <nav class="nav-header">
-                <a class="logo-header" href="">WEB<span class="studio">STUDIO</span></a>
-                <ul class="listmenu">
-                    <li class="menu"><a class="link" href="./index.html">Studio</a></li>
-                    <li class="menu"><a class="link" href="">Portfolio</a></li>
-                    <li class="menu"><a class="link" href="">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="address">
-                <ul class="header-address">
-                    <li><a class="contact" href="">info@devstudio.com</a></li>
-                    <li><a class="contact" href="">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
+        <div class="background">
+            <div class="container header-container">
+                <nav class="nav-header">
+                    <a class="logo-header" href="">WEB<span class="studio">STUDIO</span></a>
+                    <ul class="listmenu">
+                        <li class="menu"><a class="link" href="./index.html">Studio</a></li>
+                        <li class="menu"><a class="link" href="">Portfolio</a></li>
+                        <li class="menu"><a class="link" href="">Contacts</a></li>
+                    </ul>
+                </nav>
+                <address class="address">
+                    <ul class="header-address">
+                        <li><a class="contact" href="">info@devstudio.com</a></li>
+                        <li><a class="contact" href="">+11 (000) 111-11-11</a></li>
+                    </ul>
+                </address>
+            </div>
         </div>
     </header>
     <main>
