--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </header>
     <main>
-        <section class="box-type">
+      <!---  <section class="box-type">
             <div class="container container-hero-1">
                 <h1 class="bigitem">Effective Solutions for Your Business</h1>
                 <button class="button" type="button">Order Service</button>
