--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="header">
+ <header class="header">
         <div class="container header-container">
             <nav class="nav-header">
                 <a class="logo-header" href="">WEB<span class="studio">STUDIO</span></a>
@@ -33,15 +33,17 @@
                 </ul>
             </address>
         </div>
-    </header>
+    </header> 
     <main>
-        <!---  <section class="box-type">
+        <section class="box-type">
             <div class="container container-hero-1">
                 <h1 class="bigitem">Effective Solutions for Your Business</h1>
                 <button class="button" type="button">Order Service</button>
             </div>
         </section>
-        <section class="hero-text">
+
+        
+        <!--- <section class="hero-text">
             <div class="container container-hero-text">
                 <h2 class="visually-hidden">feature</h2>
                 <ul class="text-area">
