--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </div>
     </header> 
     <main>
-        
+
         <section class="box-type">
-            <div class="container container-hero-1">
-                <h1 class="bigitem">Effective Solutions for Your Business</h1>
+            <div class="container container-text-1">
+                <h1 class="text-h1">Effective Solutions for Your Business</h1>
                 <button class="button" type="button">Order Service</button>
             </div>
         </section>
