--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section class="box-type">
             <div class="container container-text-1">
-                <h1 class="text-h1">Effective Solutions for Your Business</h1>
+                <h1 class="text-effective">Effective Solutions for Your Business</h1>
                 <button class="button" type="button">Order Service</button>
             </div>
         </section>
