--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
 
 
-        <!--- <section class="hero-text">
+         <section class="hero-text">
             <div class="container container-hero-text">
                 <h2 class="visually-hidden">feature</h2>
                 <ul class="text-area">
