--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </section>
 
 
-         <section class="hero-text">
+         <section class="text-info">
             <div class="container container-hero-text">
                 <h2 class="visually-hidden">feature</h2>
-                <ul class="text-area">
+                <ul class="info-container">
                     <li class="text-textbox">
                         <h3 class="page">Strategy</h3>
                         <p>
@@ -81,7 +81,7 @@
                 </ul>
             </div>
         </section>
-        <section class="hero-ourteam">
+         <!---<section class="hero-ourteam">
             <div class="container container-hero-ourteam">
                 <h2 class="our-team">Our Team</h2>
                 <ul class="personal-team">
