--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </ul>
             </div>
         </section>
-         <!---<section class="hero-ourteam">
+         <section class="ourteam-container">
             <div class="container container-hero-ourteam">
                 <h2 class="our-team">Our Team</h2>
                 <ul class="personal-team">
@@ -116,7 +116,7 @@
                 </ul>
             </div>
         </section>
-        <section class="hero-ourportfolio">
+        <!--<section class="hero-ourportfolio">
             <div class="container container-hero-ourportfolio">
                 <h2 class="our-portfolio">Our Portfolio</h2>
                 <ul class="macine-item">
