--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
          <section class="ourteam-container">
             <div class="container container-hero-ourteam">
                 <h2 class="our-team">Our Team</h2>
-                <ul class="personal-team">
-                    <li class="personal-info">
+                <ul class="img-hero">
+                    <li class="img-info">
                         <img src="./images/foto4.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <div class="personal-name">
                             <h3 class="personal-name-info">Mark Guerrero</h3>
