--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@
                             <p class="personal-info-text">Product Designer</p>
                         </div>
                     </li>
-                    <li class="personal-info">
+                    <li class="img-info">
                         <img src="./images/foto1.jpg" alt="Tom Ford" width="264" height="260" />
                         <div class="personal-name">
                             <h3 class="personal-name-info">Tom Ford</h3>
-                            <p class="personal-info-text">Frontend Developer</p>
+                            <p class="personal-info-feature">Frontend Developer</p>
                         </div>
                     </li>
-                    <li class="personal-info">
+                    <li class="img-info">
                         <img src="./images/foto2.jpg" alt="Camila Garcia" width="264" height="260" />
                         <div class="personal-name">
                             <h3 class="personal-name-info">Camila Garcia</h3>
-                            <p class="personal-info-text">Marketing</p>
+                            <p class="personal-info-feature">Marketing</p>
                         </div>
                     </li>
-                    <li class="personal-info">
+                    <li class="img-info">
                         <img src="./images/foto3.jpg" alt="Daniel Wilson" width="264" height="260" />
                         <div class="personal-name">
                             <h3 class="personal-name-info">Daniel Wilson</h3>
-                            <p class="personal-info-text">UI Designer</p>
+                            <p class="personal-info-feature">UI Designer</p>
                         </div>
                     </li>
                 </ul>
