--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <img src="./images/foto4.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <div class="personal-name">
                             <h3 class="personal-name-info">Mark Guerrero</h3>
-                            <p class="personal-info-text">Product Designer</p>
+                            <p class="personal-info-feature">Product Designer</p>
                         </div>
                     </li>
                     <li class="img-info">
