--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
- <header class="header">
+    <header class="header">
         <div class="container header-container">
             <nav class="nav-header">
                 <a class="logo-header" href="">WEB<span class="studio">STUDIO</span></a>
@@ -35,7 +35,7 @@
             </address>
 
         </div>
-    </header> 
+    </header>
     <main>
 
         <section class="box-type">
@@ -46,7 +46,7 @@
         </section>
 
 
-         <section class="text-info">
+        <section class="text-info">
             <div class="container container-hero-text">
                 <h2 class="visually-hidden">feature</h2>
                 <ul class="info-container">
@@ -81,7 +81,7 @@
                 </ul>
             </div>
         </section>
-         <section class="ourteam-container">
+        <section class="ourteam-container">
             <div class="container container-hero-ourteam">
                 <h2 class="our-team">Our Team</h2>
                 <ul class="img-hero">
@@ -116,7 +116,7 @@
                 </ul>
             </div>
         </section>
-        <!--<section class="hero-ourportfolio">
+        <section class="hero-ourportfolio">
             <div class="container container-hero-ourportfolio">
                 <h2 class="our-portfolio">Our Portfolio</h2>
                 <ul class="macine-item">
