--- a/index.html
+++ b/index.html
@@ -119,43 +119,43 @@
         <section class="hero-ourportfolio">
             <div class="container container-hero-ourportfolio">
                 <h2 class="our-portfolio">Our Portfolio</h2>
-                <ul class="macine-item">
-                    <li class="item-1">
+                <ul class="media-box">
+                    <li class="gallery-item">
                         <img src="./images/images1.jpg" alt="Banking App" width="360" height="300" />
                         <div class="macine-info">
                             <h3 class="item-name">Banking App</h3>
                             <p class="macine-info-item">App</p>
                         </div>
                     </li>
-                    <li class="item-1">
+                    <li class="gallery-item">
                         <img src="./images/images2.jpg" alt="Cashless Payment" width="360" height="300" />
                         <div class="macine-info">
                             <h3 class="item-name">Cashless Payment</h3>
                             <p class="macine-info-item">Marketing</p>
                         </div>
                     </li>
-                    <li class="item-1">
+                    <li class="gallery-item">
                         <img src="./images/images3.jpg" alt="Meditaion App" width="360" height="300" />
                         <div class="macine-info">
                             <h3 class="item-name">Meditaion App</h3>
                             <p class="macine-info-item">App</p>
                         </div>
                     </li>
-                    <li class="item-1">
+                    <li class="gallery-item">
                         <img src="./images/images4.jpg" alt="Taxi Service" width="360" height="300" />
                         <div class="macine-info">
                             <h3 class="item-name">Taxi Service</h3>
                             <p class="macine-info-item">Marketing</p>
                         </div>
                     </li>
-                    <li class="item-1">
+                    <li class="gallery-item">
                         <img src="./images/images5.jpg" alt="Screen Illustrations" width="360" height="300" />
                         <div class="macine-info">
                             <h3 class="item-name">Screen Illustrations</h3>
                             <p class="macine-info-item">Design</p>
                         </div>
                     </li>
-                    <li class="item-1">
+                    <li class="gallery-item">
                         <img src="./images/images6.jpg" alt="Online Courses" width="360" height="300" />
                         <div class="macine-info">
                             <h3 class="item-name">Online Courses</h3>
