--- a/index.html
+++ b/index.html
@@ -121,11 +121,12 @@
                 <h2 class="our-portfolio">Our Portfolio</h2>
                 <ul class="media-box">
                     <li class="gallery-item">
-                        <img src="./images/images1.jpg" alt="Banking App" width="360" height="300" />
-                        <div class="macine-info">
-                            <h3 class="item-name">Banking App</h3>
-                            <p class="macine-info-item">App</p>
-                        </div>
+                        <div class="margin-bottom"></div>
+                            <img src="./images/images1.jpg" alt="Banking App" width="360" height="300" />
+                            <div class="macine-info">
+                                <h3 class="item-name">Banking App</h3>
+                                <p class="macine-info-item">App</p>
+                            </div>
                     </li>
                     <li class="gallery-item">
                         <img src="./images/images2.jpg" alt="Cashless Payment" width="360" height="300" />
@@ -163,6 +164,8 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+
             </div>
         </section>
     </main>
