--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h2 class="our-portfolio">Our Portfolio</h2>
                 <ul class="media-box">
                     <li class="gallery-item">
-                        <div class="margin-bottom"></div>
+                        <div class="general-div">
                             <img src="./images/images1.jpg" alt="Banking App" width="360" height="300" />
                             <div class="macine-info">
                                 <h3 class="item-name">Banking App</h3>
@@ -162,11 +162,11 @@
                             <h3 class="item-name">Online Courses</h3>
                             <p class="macine-info-item">Marketing</p>
                         </div>
-                    </li>
-                </ul>
+            </div>
+            </li>
+            </ul>
             </div>
 
-            </div>
         </section>
     </main>
     <footer>
