--- a/index.html
+++ b/index.html
@@ -166,9 +166,17 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer class="footer-base">
+        <div class="container">
+          <a href="#" class="footer-logo"
+            ><span class="logo-color">WEB</span>STUDİO</a
+          >
+          <p class="info">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </footer>
 </body>
 
 </html>
