--- a/index.html
+++ b/index.html
@@ -167,13 +167,12 @@
         </section>
     </main>
     <footer class="footer-base">
-        <div class="container">
+        <div class="container container-footer">
           <a href="#" class="footer-logo"
             ><span class="logo-color">WEB</span>STUDİO</a
           >
           <p class="info">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
           </p>
         </div>
       </footer>
