--- a/index.html
+++ b/index.html
@@ -1,244 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=,, initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-    />
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="header">
-      <div class="container header-container">
-        <nav class="nav-header">
-          <a class="logo-header" href=""
-            >WEB<span class="studio">STUDIO</span></a
-          >
-          <ul class="listmenu">
-            <li class="menu"><a class="link" href="./index.html">Studio</a></li>
-            <li class="menu"><a class="link" href="">Portfolio</a></li>
-            <li class="menu"><a class="link" href="">Contacts</a></li>
-          </ul>
-        </nav>
+        <div class="container header-container">
+            <nav class="nav-header">
+                <a class="logo-header" href="">WEB<span class="studio">STUDIO</span></a>
+                <ul class="listmenu">
+                    <li class="menu"><a class="link" href="./index.html">Studio</a></li>
+                    <li class="menu"><a class="link" href="">Portfolio</a></li>
+                    <li class="menu"><a class="link" href="">Contacts</a></li>
+                </ul>
+            </nav>
 
-        <address class="address">
-          <ul class="header-address">
-            <li><a class="contact" href="">info@devstudio.com</a></li>
-            <li><a class="contact" href="">+11 (000) 111-11-11</a></li>
-          </ul>
-        </address>
-      </div>
+            <address class="address">
+                <ul class="header-address">
+                    <li><a class="contact" href="">info@devstudio.com</a></li>
+                    <li><a class="contact" href="">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+
+        </div>
     </header>
     <main>
-      <section class="box-type">
-        <div class="container container-text-1">
-          <h1 class="text-effective">Effective Solutions for Your Business</h1>
-          <button class="button" type="button">Order Service</button>
-        </div>
-      </section>
 
-      <section class="text-info">
-        <div class="container container-hero-text">
-          <h2 class="visually-hidden">feature</h2>
-          <ul class="info-container">
-            <li class="text-textbox">
-              <h3 class="page">Strategy</h3>
-              <p>
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="text-textbox">
-              <h3 class="page">Punctuality</h3>
-              <p>
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="text-textbox">
-              <h3 class="page">Diligence</h3>
-              <p>
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="text-textbox">
-              <h3 class="page">Technologies</h3>
-              <p>
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="ourteam-container">
-        <div class="container container-hero-ourteam">
-          <h2 class="our-team">Our Team</h2>
-          <ul class="img-hero">
-            <li class="img-info">
-              <img
-                src="./images/foto4.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
-              <div class="personal-name">
-                <h3 class="personal-name-info">Mark Guerrero</h3>
-                <p class="personal-info-feature">Product Designer</p>
-              </div>
-            </li>
-            <li class="img-info">
-              <img
-                src="./images/foto1.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
-              <div class="personal-name">
-                <h3 class="personal-name-info">Tom Ford</h3>
-                <p class="personal-info-feature">Frontend Developer</p>
-              </div>
-            </li>
-            <li class="img-info">
-              <img
-                src="./images/foto2.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
-              <div class="personal-name">
-                <h3 class="personal-name-info">Camila Garcia</h3>
-                <p class="personal-info-feature">Marketing</p>
-              </div>
-            </li>
-            <li class="img-info">
-              <img
-                src="./images/foto3.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
-              <div class="personal-name">
-                <h3 class="personal-name-info">Daniel Wilson</h3>
-                <p class="personal-info-feature">UI Designer</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="hero-ourportfolio">
-        <div class="container container-hero-ourportfolio">
-          <h2 class="our-portfolio">Our Portfolio</h2>
-          <ul class="media-box">
-            <li class="gallery-item">
-              <img
-                src="./images/images1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
-              <div class="gallery-info">
-                <div class="macine-info">
-                  <h3 class="item-name">Banking App</h3>
-                  <p class="macine-info-item">App</p>
-                </div>
-              </div>
-            </li>
-            <li class="gallery-item">
-              <img
-                src="./images/images2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <div class="gallery-info">
-              <div class="macine-info">
-                <h3 class="item-name">Cashless Payment</h3>
-                <p class="macine-info-item">Marketing</p>
-              </div>
-              </div>
-            </li>
-            <li class="gallery-item">
-              <img
-                src="./images/images3.jpg"
-                alt="Meditaion App"
-                width="360"
-                height="300"
-              />
-              <div class="gallery-info">
-              <div class="macine-info">
-                <h3 class="item-name">Meditaion App</h3>
-                <p class="macine-info-item">App</p>
-              </div>
-              </div>
-            </li>
-            <li class="gallery-item">
-              <img
-                src="./images/images4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <div class="gallery-info">
-              <div class="macine-info">
-                <h3 class="item-name">Taxi Service</h3>
-                <p class="macine-info-item">Marketing</p>
-              </div>
-              </div>
-            </li>
-            <li class="gallery-item">
-              <img
-                src="./images/images5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="gallery-info">
-              <div class="macine-info">
-                <h3 class="item-name">Screen Illustrations</h3>
-                <p class="macine-info-item">Design</p>
-              </div>
-              </div>
-            </li>
-            <li class="gallery-item">
-              <img
-                src="./images/images6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <div class="gallery-info">
-              <div class="macine-info">
-                <h3 class="item-name">Online Courses</h3>
-                <p class="macine-info-item">Marketing</p>
-              </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
+        <section class="box-type">
+            <div class="container container-text-1">
+                <h1 class="text-effective">Effective Solutions for Your Business</h1>
+                <button class="button" type="button">Order Service</button>
+            </div>
+        </section>
+
+
+        <section class="text-info">
+            <div class="container container-hero-text">
+                <h2 class="visually-hidden">feature</h2>
+                <ul class="info-container">
+                    <li class="text-textbox">
+                        <h3 class="page">Strategy</h3>
+                        <p>
+                            Our goal is to identify the business problem to walk away with
+                            the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li class="text-textbox">
+                        <h3 class="page">Punctuality</h3>
+                        <p>
+                            Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.
+                        </p>
+                    </li>
+                    <li class="text-textbox">
+                        <h3 class="page">Diligence</h3>
+                        <p>
+                            Research and confirm brands that present the strongest digital
+                            growth opportunities and minimize risk.
+                        </p>
+                    </li>
+                    <li class="text-textbox">
+                        <h3 class="page">Technologies</h3>
+                        <p>
+                            Design practice focused on digital experiences. We bring forth a
+                            deep passion for problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="ourteam-container">
+            <div class="container container-hero-ourteam">
+                <h2 class="our-team">Our Team</h2>
+                <ul class="img-hero">
+                    <li class="img-info">
+                        <img src="./images/foto4.jpg" alt="Mark Guerrero" width="264" height="260" />
+                        <div class="personal-name">
+                            <h3 class="personal-name-info">Mark Guerrero</h3>
+                            <p class="personal-info-feature">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="img-info">
+                        <img src="./images/foto1.jpg" alt="Tom Ford" width="264" height="260" />
+                        <div class="personal-name">
+                            <h3 class="personal-name-info">Tom Ford</h3>
+                            <p class="personal-info-feature">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="img-info">
+                        <img src="./images/foto2.jpg" alt="Camila Garcia" width="264" height="260" />
+                        <div class="personal-name">
+                            <h3 class="personal-name-info">Camila Garcia</h3>
+                            <p class="personal-info-feature">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="img-info">
+                        <img src="./images/foto3.jpg" alt="Daniel Wilson" width="264" height="260" />
+                        <div class="personal-name">
+                            <h3 class="personal-name-info">Daniel Wilson</h3>
+                            <p class="personal-info-feature">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="hero-ourportfolio">
+            <div class="container container-hero-ourportfolio">
+                <h2 class="our-portfolio">Our Portfolio</h2>
+                <ul class="media-box">
+                    <li class="gallery-item">
+                        <img src="./images/images1.jpg" alt="Banking App" width="360" height="300" />
+                        <div class="macine-info">
+                            <h3 class="item-name">Banking App</h3>
+                            <p class="macine-info-item">App</p>
+                        </div>
+                    </li>
+                    <li class="gallery-item">
+                        <img src="./images/images2.jpg" alt="Cashless Payment" width="360" height="300" />
+                        <div class="macine-info">
+                            <h3 class="item-name">Cashless Payment</h3>
+                            <p class="macine-info-item">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="gallery-item">
+                        <img src="./images/images3.jpg" alt="Meditaion App" width="360" height="300" />
+                        <div class="macine-info">
+                            <h3 class="item-name">Meditaion App</h3>
+                            <p class="macine-info-item">App</p>
+                        </div>
+                    </li>
+                    <li class="gallery-item">
+                        <img src="./images/images4.jpg" alt="Taxi Service" width="360" height="300" />
+                        <div class="macine-info">
+                            <h3 class="item-name">Taxi Service</h3>
+                            <p class="macine-info-item">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="gallery-item">
+                        <img src="./images/images5.jpg" alt="Screen Illustrations" width="360" height="300" />
+                        <div class="macine-info">
+                            <h3 class="item-name">Screen Illustrations</h3>
+                            <p class="macine-info-item">Design</p>
+                        </div>
+                    </li>
+                    <li class="gallery-item">
+                        <img src="./images/images6.jpg" alt="Online Courses" width="360" height="300" />
+                        <div class="macine-info">
+                            <h3 class="item-name">Online Courses</h3>
+                            <p class="macine-info-item">Marketing</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
-    <footer class="footer-base">
-      <div class="container container-footer">
-        <a href="#" class="footer-logo"
-          ><span class="logo-color">WEB</span>STUDİO</a
-        >
-        <p class="info">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-    </footer>
-  </body>
+     <footer class="footer-base">
+        <div class=" container container-footer">
+          <a href="#" class="footer-logo"
+            ><span class="logo-color">WEB</span>STUDİO</a
+          >
+          <p class="info">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </footer>
+</body>
+
 </html>
